--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_test_view_pager">TestViewPager</string>
+    <string name="title_activity_list">ListActivity</string>
+    <string name="share">Share</string>
 
 </resources>
