--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_test_view_pager">TestViewPager</string>
     <string name="title_activity_list">ListActivity</string>
     <string name="share">Share</string>
+    <string name="title_activity_news">NewsActivity</string>
 
 </resources>
